--- a/notebooks/Corrections/WindDirectionOffset.ipynb
+++ b/notebooks/Corrections/WindDirectionOffset.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../../images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
+    "<img src=\"https://gitlab.ethz.ch/diive/diive/-/blob/main/images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
     "<p style=\"float:left; line-height:100px; margin-left:50px; font-size:30px;\">\n",
     "    <b>\n",
     "        Wind Direction Offset Correction\n",
