--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -5,7 +5,7 @@
    "id": "6bfdd14f-0936-4eac-8642-5dd9541add8b",
    "metadata": {},
    "source": [
-    "<img src=\"../../images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
+    "<img src=\"https://gitlab.ethz.ch/diive/diive/-/blob/main/images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
     "<p style=\"float:left; line-height:100px; margin-left:50px; font-size:30px;\">\n",
     "    <b>\n",
     "        Overview\n",
