--- a/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
@@ -5,7 +5,7 @@
    "id": "7d3a0ccc-6968-4fcd-b779-2b012931f687",
    "metadata": {},
    "source": [
-    "<img src=\"https://gitlab.ethz.ch/diive/diive/-/blob/main/images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
+    "<img src=\"../_images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
     "<p style=\"float:left; line-height:100px; margin-left:50px; font-size:30px;\">\n",
     "    <b>\n",
     "        Read Data From Files\n",
