Notebook images test

--- a/notebooks/Corrections/WindDirectionOffset.ipynb
+++ b/notebooks/Corrections/WindDirectionOffset.ipynb
@@ -4,27 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img src=\"../_images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
-    "<p style=\"float:left; line-height:100px; margin-left:50px; font-size:30px;\">\n",
-    "    <b>\n",
-    "        Wind Direction Offset Correction\n",
-    "    </b>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Example notebook for class `WindDirOffset` in `diive.pkgs.corrections.winddiroffset` of the time series processing library `diive`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "![lop](../../images/logo_diive1_128px.png)\n",
+    "# **Wind Direction Offset Correction**\n",
+    "---\n",
     "**Notebook creation date**: 16 Apr 2023  \n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "---\n",
+    "Example notebook for class `WindDirOffset` in `diive.pkgs.corrections.winddiroffset` of the time series processing library `diive`.  "
    ]
   },
   {
