--- a/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
@@ -5,29 +5,13 @@
    "id": "7d3a0ccc-6968-4fcd-b779-2b012931f687",
    "metadata": {},
    "source": [
-    "<img src=\"../_images/logo_diive1_256px.png\" alt=\"diive time series library\" width=\"100\" style=\"float:left;\">\n",
-    "<p style=\"float:left; line-height:100px; margin-left:50px; font-size:30px;\">\n",
-    "    <b>\n",
-    "        Read Data From Files\n",
-    "    </b>\n",
-    "</p>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "974cc517-0c4c-49dc-ac66-f31abc052f31",
-   "metadata": {},
-   "source": [
-    "Example notebook for reading ICOS data files with the time series processing library `diive`."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "64911784-e57a-4940-ba0f-d5399120bff9",
-   "metadata": {},
-   "source": [
+    "![lop](../../images/logo_diive1_128px.png)\n",
+    "# Read Data From Files\n",
+    "---\n",
     "**Notebook creation date**: 17 Apr 2023  \n",
-    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)"
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "---\n",
+    "Example notebook for reading ICOS data files with the time series processing library `diive`."
    ]
   },
   {
