--- a/notebooks/Time Functions/times.ipynb
+++ b/notebooks/Time Functions/times.ipynb
@@ -1,16 +1,17 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "cd4b8c3b-25d7-4001-948a-f4aef39ed67f",
+   "cell_type": "markdown",
+   "id": "2d723e10-b02e-4453-b18f-d124b8a88fc5",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import importlib\n",
-    "import diive\n",
-    "importlib.reload(diive.core.times.times);\n",
-    "import diive.core.times.times"
+    "![lop](../../images/logo_diive1_128px.png)\n",
+    "# **Time Functions**\n",
+    "---\n",
+    "**Notebook creation date**: 18 Apr 2023  \n",
+    "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
+    "---\n",
+    "Example notebook for time functions in the time series processing library `diive`.  "
    ]
   },
   {
