--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -5,9 +5,9 @@
    "id": "6bfdd14f-0936-4eac-8642-5dd9541add8b",
    "metadata": {},
    "source": [
-    "![lop](../../images/logo_diive1_128px.png)\n",
+    "![lop](../images/logo_diive1_128px.png)\n",
     "# **Overview**\n",
-    "---\n",
+    "\n",
     "**Last updated**: 17 Apr 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
@@ -45,13 +45,23 @@
    "id": "f1fbedcb-ac0f-4065-b976-2073161d9d4c",
    "metadata": {},
    "source": [
-    "- [`ReadFiles/Read_data_from_ICOS_BM_files.ipynb`](notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb)"
+    "- `ReadFiles/Read_data_from_ICOS_BM_files.ipynb`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b6f1c353-61e9-4211-8f37-d337bd19e865",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "[test](ReadFiles/Read_data_from_ICOS_BM_files.ipynb)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "55cf86b1-2fc1-409f-8bf1-a753f4284936",
+   "id": "29a2d7a5-f0d1-4276-9a22-bcb42bcab814",
    "metadata": {},
    "outputs": [],
    "source": []
