--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -28,7 +28,7 @@
    "id": "8ceb3736-b947-4578-bbd5-0d106147cffd",
    "metadata": {},
    "source": [
-    "- `Corrections/WindDirectionOffset.ipynb`"
+    "- [Wind direction offset correction](Corrections/WindDirectionOffset.ipynb)"
    ]
   },
   {
@@ -45,17 +45,7 @@
    "id": "f1fbedcb-ac0f-4065-b976-2073161d9d4c",
    "metadata": {},
    "source": [
-    "- `ReadFiles/Read_data_from_ICOS_BM_files.ipynb`"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6f1c353-61e9-4211-8f37-d337bd19e865",
-   "metadata": {
-    "tags": []
-   },
-   "source": [
-    "[test](ReadFiles/Read_data_from_ICOS_BM_files.ipynb)"
+    "- [Read data from ICOS BM files](ReadFiles/Read_data_from_ICOS_BM_files.ipynb)"
    ]
   },
   {
