--- a/notebooks/TimeFunctions/times.ipynb
+++ b/notebooks/TimeFunctions/times.ipynb
@@ -21,7 +21,7 @@
     "tags": []
    },
    "source": [
-    "## Current unix Time\n",
+    "# Current unix Time\n",
     "Number given in nanoseconds since epoch"
    ]
   },
@@ -32,9 +32,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\holukas\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-VjNhA4Xt-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import Int64Index as NumericIndex\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "1681773013631655600"
+       "1681775583987969200"
       ]
      },
      "execution_count": 2,
@@ -52,7 +60,7 @@
    "id": "f5c263c2-b6d8-40de-9f6a-c58ca15fb527",
    "metadata": {},
    "source": [
-    "## Current datetime"
+    "# Current datetime"
    ]
   },
   {
@@ -65,8 +73,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Current datetime as datetime: 2023-04-18 01:10:15.110991\n",
-      "Current datetime as string: 2023-04-18 01:10:15\n"
+      "Current datetime as datetime: 2023-04-18 01:53:04.006971\n",
+      "Current datetime as string: 2023-04-18 01:53:04\n"
      ]
     }
    ],
@@ -82,7 +90,7 @@
    "id": "a454cc06-9c27-4041-825a-4ff49023aaa4",
    "metadata": {},
    "source": [
-    "## Current datetime as string\n",
+    "# Current datetime as string\n",
     "String given as YYYYmmddHHMMSS"
    ]
   },
@@ -95,7 +103,7 @@
     {
      "data": {
       "text/plain": [
-       "'20230418011016'"
+       "'20230418015304'"
       ]
      },
      "execution_count": 4,
@@ -113,7 +121,7 @@
    "id": "efb0b9c1-aac3-4270-9368-aaed4e276495",
    "metadata": {},
    "source": [
-    "## Current time with microseconds as string\n",
+    "# Current time with microseconds as string\n",
     "String given as HHMMSSffffff"
    ]
   },
@@ -126,7 +134,7 @@
     {
      "data": {
       "text/plain": [
-       "'011020650380'"
+       "'015304035976'"
       ]
      },
      "execution_count": 5,
@@ -144,7 +152,7 @@
    "id": "ae1400ff-9400-49a1-96a9-0f3aeb167a28",
    "metadata": {},
    "source": [
-    "## Identifier string\n",
+    "# Identifier string\n",
     "Includes current datetime as YYYYmmdd-HHMMSS"
    ]
   },
@@ -157,7 +165,7 @@
     {
      "data": {
       "text/plain": [
-       "'RUN-20230418-011023'"
+       "'RUN-20230418-015304'"
       ]
      },
      "execution_count": 6,
@@ -179,7 +187,7 @@
     {
      "data": {
       "text/plain": [
-       "'MYSCRIPT-20230418-011024'"
+       "'MYSCRIPT-20230418-015304'"
       ]
      },
      "execution_count": 7,
@@ -196,7 +204,7 @@
    "id": "8e4d906e-258c-4c99-b665-efeece6dabb2",
    "metadata": {},
    "source": [
-    "## pandas Timedelta as pandas string representation"
+    "# pandas Timedelta as pandas string representation"
    ]
   },
   {
