--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -19,6 +19,23 @@
    "id": "46045ed1-9cdc-4e41-bde9-69bf9e41ebf4",
    "metadata": {},
    "source": [
+    "# Analyses\n",
+    "Examples for data analyses"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bee8460-ffc1-43e7-b3d9-99c63be7e07b",
+   "metadata": {},
+   "source": [
+    "- [Find gaps in time series](Analyses/GapFinder.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2c06f82a-418e-48b7-8ba7-3d411ad1c557",
+   "metadata": {},
+   "source": [
     "# Corrections\n",
     "Examples for data corrections"
    ]
