Updated freq detection from data

--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -24,12 +24,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nopan\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-wQ6jAUAf-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import Int64Index as NumericIndex\n"
+     ]
+    }
+   ],
    "source": [
     "from diive.pkgs.analyses.gapfinder import GapFinder\n",
     "from diive.configs.exampledata import load_exampledata_DIIVE_CSV_30MIN"
@@ -45,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
     "tags": []
@@ -76,7 +85,7 @@
        "Freq: 30T, Name: NEE_CUT_REF_orig, Length: 1488, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "0783bda1-e410-42f0-a4c6-be64000852e9",
    "metadata": {
     "tags": []
@@ -118,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "c90d528e-9415-46d4-9eea-030c265e65f3",
    "metadata": {
     "tags": []
@@ -246,7 +255,7 @@
        "[122 rows x 3 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -257,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "id": "8861b4a1-072f-41a1-85da-a64a34d22218",
    "metadata": {
     "tags": []
@@ -278,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "7a273c65-f514-4e4e-85be-c2b0f2862047",
    "metadata": {
     "tags": []
