--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -8,7 +8,7 @@
     "![lop](../images/logo_diive1_128px.png)\n",
     "# **Overview**\n",
     "\n",
-    "**Last updated**: 17 Apr 2023  \n",
+    "**Last updated**: 23 Apr 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
@@ -82,9 +82,25 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "adcde2e8-b2e3-44a0-9ec5-29b9f79d69f8",
+   "metadata": {},
+   "source": [
+    "# Timestamps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a27be0c-3e50-460a-b642-1d71241f95e4",
+   "metadata": {},
+   "source": [
+    "- [Detect time resolution from data](TimeStamps/Detect_time_resolution.ipynb)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a5892a55-0d17-4ba9-ab7c-cc296e6491e5",
+   "id": "82bcccec-f76a-48ab-ab24-3db008d37eab",
    "metadata": {},
    "outputs": [],
    "source": []
