--- a/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_ICOS_BM_files.ipynb
@@ -33,19 +33,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 1,
    "id": "1dee684b-7024-42d6-adae-df856a50baf3",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\nopan\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-wQ6jAUAf-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "  from pandas import Int64Index as NumericIndex\n"
+     ]
+    }
+   ],
    "source": [
     "from diive.core.io.filereader import DataFileReader"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "id": "6b0a881f-a277-4bbb-8271-f688940c1de1",
    "metadata": {
     "ExecuteTime": {
@@ -74,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "id": "fdd9e178-1b10-4411-a85c-3e44b70fa9cf",
    "metadata": {
     "ExecuteTime": {
@@ -505,7 +514,7 @@
        "[8640 rows x 26 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -531,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "fda4cf2f-e62d-445f-8194-78832704ccf8",
    "metadata": {
     "tags": []
@@ -543,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "332b287f-e964-4870-9764-86de16eaf8a7",
    "metadata": {
     "tags": []
@@ -564,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "1ca77e4b-9f14-4bf9-a108-2f32ccb7ac4d",
    "metadata": {
     "tags": []
@@ -991,7 +1000,7 @@
        "[8640 rows x 26 columns]"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
