--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -311,9 +311,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6e2e93c7-73ad-4f06-80f5-17014de38057",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Finish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "52d47c35-eda2-4bb5-9b2b-1faedb4fb43c",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 2023-04-23 18:47:07\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e56ab34-9046-4fd2-8273-796b1c6f1ba2",
+   "id": "b9900f7d-1bd3-4aa3-bd9a-33a8e3557678",
    "metadata": {},
    "outputs": [],
    "source": []
