--- a/notebooks/Corrections/WindDirectionOffset.ipynb
+++ b/notebooks/Corrections/WindDirectionOffset.ipynb
@@ -619,14 +619,39 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Finish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 2023-04-23 18:46:46\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "jupyter": {
-     "outputs_hidden": false
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
