--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -62,7 +62,9 @@
    "id": "f1fbedcb-ac0f-4065-b976-2073161d9d4c",
    "metadata": {},
    "source": [
-    "- [Read data from ICOS BM files](ReadFiles/Read_data_from_ICOS_BM_files.ipynb)"
+    "- [Read data from multiple ICOS BM files with 1-row header](ReadFiles/Read_data_from_multiple_ICOS_BM_files_1header-row.ipynb)\n",
+    "- [Read data from multiple ICOS BM files with 2-row header](ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb)\n",
+    "- [Read data from single ICOS BM file with 2-row header](ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb)"
    ]
   },
   {
@@ -95,6 +97,16 @@
    "metadata": {},
    "source": [
     "- [Detect time resolution from data](TimeStamps/Detect_time_resolution.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "92028111-2dc8-4e7e-b7a9-11bdd1990800",
+   "metadata": {},
+   "source": [
+    "# Workbench\n",
+    "Use cases\n",
+    "- [ICOS: Compare uploaded to local precipitation data](Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb)"
    ]
   },
   {
