--- a/notebooks/ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb
+++ b/notebooks/ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "![lop](../../images/logo_diive1_128px.png)\n",
-    "# Read Data From Files\n",
+    "# **Read Data From Single ICOS BM File**\n",
     "\n",
     "**Notebook creation date**: 17 Apr 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
@@ -19,8 +19,7 @@
    "id": "86a2b9c5-c387-4f51-8580-4dd21d0a937a",
    "metadata": {},
    "source": [
-    "# **ICOS BM files**\n",
-    "BM files contain raw bio-meteorological data."
+    "ICOS BM files contain raw bio-meteorological data."
    ]
   },
   {
@@ -1011,9 +1010,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "59041c0d-d9f4-4da3-9e4e-52c56ffa50f8",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Finish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "b605f2a4-a9e4-42ca-a408-67826b57eb50",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 2023-04-23 18:46:22\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee99ec93-e1af-482e-a234-066deb7d3862",
+   "id": "bc2102ba-6335-48be-83dc-6f753baefa2e",
    "metadata": {},
    "outputs": [],
    "source": []
