--- a/notebooks/TimeFunctions/times.ipynb
+++ b/notebooks/TimeFunctions/times.ipynb
@@ -299,9 +299,41 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "755aea3f-78a5-48c9-a7d2-06fe5882ee3f",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "# Finish"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "e68dd424-a146-49c1-a57d-6aacb7cf113b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Finished 2023-04-23 18:45:26\n"
+     ]
+    }
+   ],
+   "source": [
+    "from datetime import datetime\n",
+    "dt_string = datetime.now().strftime(\"%Y-%m-%d %H:%M:%S\")\n",
+    "print(f\"Finished {dt_string}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88d3ef8e-fc23-417c-8748-a5bbc6bb2623",
+   "id": "1fe40c15-b07c-4e8c-b6be-dc6a2060aa71",
    "metadata": {},
    "outputs": [],
    "source": []
