--- a/notebooks/Analyses/GapFinder.ipynb
+++ b/notebooks/Analyses/GapFinder.ipynb
@@ -24,21 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "98a0b6ed-8f83-4519-b23f-a13453dff0a1",
    "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\nopan\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-wQ6jAUAf-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
-      "  from pandas import Int64Index as NumericIndex\n"
-     ]
+    "tags": [],
+    "ExecuteTime": {
+     "start_time": "2023-06-16T13:49:19.240475Z",
+     "end_time": "2023-06-16T13:49:19.262416Z"
     }
-   ],
+   },
+   "outputs": [],
    "source": [
     "from diive.pkgs.analyses.gapfinder import GapFinder\n",
     "from diive.configs.exampledata import load_exampledata_DIIVE_CSV_30MIN"
@@ -57,7 +52,11 @@
    "execution_count": 2,
    "id": "d6a8a136-b0da-44e5-989a-2f23e3109e79",
    "metadata": {
-    "tags": []
+    "tags": [],
+    "ExecuteTime": {
+     "start_time": "2023-06-16T13:49:15.165432Z",
+     "end_time": "2023-06-16T13:49:15.330985Z"
+    }
    },
    "outputs": [
     {
@@ -69,21 +68,7 @@
     },
     {
      "data": {
-      "text/plain": [
-       "TIMESTAMP_MIDDLE\n",
-       "2022-07-01 00:15:00         NaN\n",
-       "2022-07-01 00:45:00         NaN\n",
-       "2022-07-01 01:15:00    1.304188\n",
-       "2022-07-01 01:45:00         NaN\n",
-       "2022-07-01 02:15:00         NaN\n",
-       "                         ...   \n",
-       "2022-07-31 21:45:00         NaN\n",
-       "2022-07-31 22:15:00         NaN\n",
-       "2022-07-31 22:45:00         NaN\n",
-       "2022-07-31 23:15:00         NaN\n",
-       "2022-07-31 23:45:00         NaN\n",
-       "Freq: 30T, Name: NEE_CUT_REF_orig, Length: 1488, dtype: float64"
-      ]
+      "text/plain": "TIMESTAMP_MIDDLE\n2022-07-01 00:15:00         NaN\n2022-07-01 00:45:00         NaN\n2022-07-01 01:15:00    1.304188\n2022-07-01 01:45:00         NaN\n2022-07-01 02:15:00         NaN\n                         ...   \n2022-07-31 21:45:00         NaN\n2022-07-31 22:15:00         NaN\n2022-07-31 22:45:00         NaN\n2022-07-31 23:15:00         NaN\n2022-07-31 23:45:00         NaN\nFreq: 30T, Name: NEE_CUT_REF_orig, Length: 1488, dtype: float64"
      },
      "execution_count": 2,
      "metadata": {},
