--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -8,7 +8,7 @@
     "![lop](../images/logo_diive1_128px.png)\n",
     "# **Overview**\n",
     "\n",
-    "**Last updated**: 24 Apr 2023  \n",
+    "**Last updated**: 15 Jun 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
@@ -29,6 +29,22 @@
    "metadata": {},
    "source": [
     "- [Find gaps in time series](Analyses/GapFinder.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a8370933-2a5b-455a-9efb-3d32849cf43b",
+   "metadata": {},
+   "source": [
+    "# Calculate Variable"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "400a5e8c-adb7-4f8f-856a-4f8da965948f",
+   "metadata": {},
+   "source": [
+    "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)"
    ]
   },
   {
@@ -64,7 +80,7 @@
    "id": "83cfc453-4d16-41e1-a439-d96aaf2013f8",
    "metadata": {},
    "source": [
-    "- [Convert EddyPro fluxnet output files for upload to FLUXNET database](Formats/ConvertEddyProFluxnetFileForUpload.ipynb)"
+    "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)"
    ]
   },
   {
@@ -85,6 +101,24 @@
     "- [Read data from multiple ICOS BM files with 2-row header](ReadFiles/Read_data_from_multiple_ICOS_BM_files_2header-rows.ipynb)\n",
     "- [Read data from single ICOS BM file with 2-row header](ReadFiles/Read_data_from_single_ICOS_BM_file_2header-rows.ipynb)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Stats"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "- [Calculate time series stats](Stats/TimeSeriesStats.ipynb)"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
   },
   {
    "cell_type": "markdown",
