--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -2,16 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6bfdd14f-0936-4eac-8642-5dd9541add8b",
+   "id": "353333d0-67f3-4170-99b8-4568b125ffe9",
    "metadata": {},
    "source": [
     "![lop](../images/logo_diive1_128px.png)\n",
-    "# **Overview**\n",
+    "<span style='background:#FFF8E1; font-size:40px; display:block; border-left:40px solid #FFECB3; padding-left:40px;'>\n",
+    "<b>\n",
+    "    Overview of Notebooks\n",
+    "</b>\n",
+    "</span>\n",
     "\n",
-    "**Last updated**: 15 Jun 2023  \n",
+    "**Last updated**: 18 Aug 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67c375a9-2ad0-406e-a304-8775ff829de7",
+   "metadata": {},
+   "source": [
+    "</br>"
    ]
   },
   {
@@ -33,6 +45,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d867ad1b-a82e-4303-94b1-661ee4f03fb6",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a8370933-2a5b-455a-9efb-3d32849cf43b",
    "metadata": {},
    "source": [
@@ -45,6 +65,14 @@
    "metadata": {},
    "source": [
     "- [Calculate VPD from TA and RH](CalculateVariable/Calculate_VPD_from_TA_and_RH.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c5e2f37-2b24-4e00-ba16-248d750f7a5a",
+   "metadata": {},
+   "source": [
+    "</br>"
    ]
   },
   {
@@ -68,6 +96,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "20ebc30d-ef5d-4328-801a-673f6fd1e444",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6f56983c-9d4a-4e38-93ec-654347709ea1",
    "metadata": {},
    "source": [
@@ -80,7 +116,42 @@
    "id": "83cfc453-4d16-41e1-a439-d96aaf2013f8",
    "metadata": {},
    "source": [
-    "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)"
+    "- [Format EddyPro fluxnet output files for upload to FLUXNET database](Formats/FormatEddyProFluxnetFileForUpload.ipynb)\n",
+    "- [Load and save Parquet file](Formats/LoadSaveParquetFile.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1b5e22b5-1cc7-495e-8d4a-a3b98a61c5cf",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e1b4c26-acb6-4d14-bf32-7b98147e4345",
+   "metadata": {},
+   "source": [
+    "# Flux Processing Chain\n",
+    "Post-processing of Level-1 fluxes  \n",
+    "See also: [Swiss FluxNet Flux Processing Chain](https://www.swissfluxnet.ethz.ch/index.php/data/ecosystem-fluxes/flux-processing-chain/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3344d3b-0d72-4915-a84e-45b5eec3c7b6",
+   "metadata": {},
+   "source": [
+    "- [Flux Processing Chain](FluxProcessingChain/FluxProcessingChain.ipynb): Quality flag extension (Level-2), storage correction (Level-3.1), outlier removal (Level-3.2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ddb8a350-dd5d-420b-9c7f-04ca4003164a",
+   "metadata": {},
+   "source": [
+    "</br>"
    ]
   },
   {
@@ -104,21 +175,35 @@
   },
   {
    "cell_type": "markdown",
+   "id": "808f0e8c-c40c-4513-88e9-14e1828df9de",
+   "metadata": {},
    "source": [
-    "# Stats"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+    "</br>"
+   ]
   },
   {
    "cell_type": "markdown",
+   "id": "acfd5fc6",
+   "metadata": {},
+   "source": [
+    "# Stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "219558b3",
+   "metadata": {},
    "source": [
     "- [Calculate time series stats](Stats/TimeSeriesStats.ipynb)"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bcb29deb-65fb-4f91-aced-83f78a324805",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -134,6 +219,14 @@
    "metadata": {},
    "source": [
     "- [Various time functions](TimeFunctions/times.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c751f7f7-bdb2-4f23-a863-3c466c2764a2",
+   "metadata": {},
+   "source": [
+    "</br>"
    ]
   },
   {
@@ -154,6 +247,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fe142dc3-0978-4d00-8665-d9a689a7bb8d",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "92028111-2dc8-4e7e-b7a9-11bdd1990800",
    "metadata": {},
    "source": [
@@ -163,12 +264,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "82bcccec-f76a-48ab-ab24-3db008d37eab",
+   "cell_type": "markdown",
+   "id": "14b575ae-c02a-4113-9df3-3de5d919b868",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "</br>"
+   ]
   }
  ],
  "metadata": {
