--- a/notebooks/Corrections/WindDirectionOffset.ipynb
+++ b/notebooks/Corrections/WindDirectionOffset.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\holukas\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-7H5NxUqg-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
+      "C:\\Users\\holukas\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\diive-HxUoW9nG-py3.9\\lib\\site-packages\\statsmodels\\compat\\pandas.py:65: FutureWarning: pandas.Int64Index is deprecated and will be removed from pandas in a future version. Use pandas.Index with the appropriate dtype instead.\n",
       "  from pandas import Int64Index as NumericIndex\n"
      ]
     }
@@ -81,6 +81,41 @@
     "from diive.configs.exampledata import load_exampledata_winddir\n",
     "from diive.core.plotting.heatmap_datetime import HeatmapDateTime\n",
     "from diive.pkgs.corrections.winddiroffset import WindDirOffset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Show docstring"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WindDirOffset\n",
+      "\n",
+      "    Compare yearly wind direction histograms to reference, detect\n",
+      "    offset in comparison to reference and correct wind directions\n",
+      "    for offset per year\n",
+      "\n",
+      "    - Example notebook available in:\n",
+      "        notebooks/Corrections/WindDirectionOffset.ipynb\n",
+      "    \n"
+     ]
+    }
+   ],
+   "source": [
+    "print(WindDirOffset.__name__)\n",
+    "print(WindDirOffset.__doc__)"
    ]
   },
   {
