--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -12,7 +12,7 @@
     "</b>\n",
     "</span>\n",
     "\n",
-    "**Last updated**: 18 Aug 2023  \n",
+    "**Last updated**: 20 Aug 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
@@ -149,6 +149,30 @@
   {
    "cell_type": "markdown",
    "id": "ddb8a350-dd5d-420b-9c7f-04ca4003164a",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd147261-d558-4bf1-adf8-b0d6b6c26553",
+   "metadata": {},
+   "source": [
+    "# Plotting"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db13d0fc-6ee4-4bec-a768-d5464513b0d6",
+   "metadata": {},
+   "source": [
+    "- [Simple (interactive) time series plot](Plotting/TimeSeries.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0367c6d6-09ec-45e8-bbd1-bccd391bd514",
    "metadata": {},
    "source": [
     "</br>"
