Added RF notebooks
Former-commit-id: 4acff11dbcc648d16037ff8a1023a6d792a1e5d0

--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "![lop](../images/logo_diive1_128px.png)\n",
-    "<span style='background:#FFF8E1; font-size:40px; display:block; border-left:40px solid #FFECB3; padding-left:40px;'>\n",
+    "<span style='font-size:40px; display:block;'>\n",
     "<b>\n",
     "    Overview of Notebooks\n",
     "</b>\n",
     "</span>\n",
     "\n",
-    "**Last updated**: 20 Aug 2023  \n",
+    "**Last updated**: 13 Sep 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
@@ -31,7 +31,7 @@
    "id": "46045ed1-9cdc-4e41-bde9-69bf9e41ebf4",
    "metadata": {},
    "source": [
-    "# Analyses\n",
+    "# **Analyses**\n",
     "Examples for data analyses"
    ]
   },
@@ -56,7 +56,7 @@
    "id": "a8370933-2a5b-455a-9efb-3d32849cf43b",
    "metadata": {},
    "source": [
-    "# Calculate Variable"
+    "# **Calculate Variable**"
    ]
   },
   {
@@ -82,7 +82,7 @@
     "tags": []
    },
    "source": [
-    "# Corrections\n",
+    "# **Corrections**\n",
     "Examples for data corrections"
    ]
   },
@@ -107,7 +107,7 @@
    "id": "6f56983c-9d4a-4e38-93ec-654347709ea1",
    "metadata": {},
    "source": [
-    "# Formats\n",
+    "# **Formats**\n",
     "Format data"
    ]
   },
@@ -133,7 +133,7 @@
    "id": "7e1b4c26-acb6-4d14-bf32-7b98147e4345",
    "metadata": {},
    "source": [
-    "# Flux Processing Chain\n",
+    "# **Flux Processing Chain**\n",
     "Post-processing of Level-1 fluxes  \n",
     "See also: [Swiss FluxNet Flux Processing Chain](https://www.swissfluxnet.ethz.ch/index.php/data/ecosystem-fluxes/flux-processing-chain/)"
    ]
@@ -156,10 +156,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "047ca5dd-0f31-4eb6-90f3-638d830712c0",
+   "metadata": {},
+   "source": [
+    "# **Gap-filling**\n",
+    "Gap-filling of time series data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ec0b4ba4-f35a-4e3c-988e-83b79b70fec7",
+   "metadata": {},
+   "source": [
+    "- [Gap-filling with random forest](GapFilling/RandomForestGapFilling.ipynb)\n",
+    "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "479899d9-881d-4231-bc7d-0e83789cbe09",
+   "metadata": {},
+   "source": [
+    "</br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "cd147261-d558-4bf1-adf8-b0d6b6c26553",
    "metadata": {},
    "source": [
-    "# Plotting"
+    "# **Plotting**"
    ]
   },
   {
@@ -183,7 +209,7 @@
    "id": "0d1039de-33f0-4e03-9ac5-e38e570ef56d",
    "metadata": {},
    "source": [
-    "# ReadFiles\n",
+    "# **ReadFiles**\n",
     "Examples for reading data from files"
    ]
   },
@@ -210,7 +236,7 @@
    "id": "acfd5fc6",
    "metadata": {},
    "source": [
-    "# Stats"
+    "# **Stats**"
    ]
   },
   {
@@ -234,7 +260,7 @@
    "id": "7c81ebbd-a31d-4fe1-8186-888277072046",
    "metadata": {},
    "source": [
-    "# Time Functions"
+    "# **Time Functions**"
    ]
   },
   {
@@ -258,7 +284,7 @@
    "id": "adcde2e8-b2e3-44a0-9ec5-29b9f79d69f8",
    "metadata": {},
    "source": [
-    "# Timestamps"
+    "# **Timestamps**"
    ]
   },
   {
@@ -282,9 +308,10 @@
    "id": "92028111-2dc8-4e7e-b7a9-11bdd1990800",
    "metadata": {},
    "source": [
-    "# Workbench\n",
+    "# **Workbench**\n",
     "Use cases\n",
-    "- [ICOS: Compare uploaded to local precipitation data](Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb)"
+    "- [ICOS: Compare uploaded to local precipitation data](Workbench/ICOS_precipitation_compare_uploaded_to_local_data.ipynb)\n",
+    "- [Remove unneeded columns](Workbench/Remove_unneeded_cols.ipynb)"
    ]
   },
   {
