--- a/notebooks/OVERVIEW.ipynb
+++ b/notebooks/OVERVIEW.ipynb
@@ -12,7 +12,7 @@
     "</b>\n",
     "</span>\n",
     "\n",
-    "**Last updated**: 13 Sep 2023  \n",
+    "**Last updated**: 16 Sep 2023  \n",
     "**Author**: Lukas Hörtnagl (holukas@ethz.ch)\n",
     "---\n",
     "Overview of example notebooks for the time series processing library `diive`."
@@ -169,7 +169,8 @@
    "metadata": {},
    "source": [
     "- [Gap-filling with random forest](GapFilling/RandomForestGapFilling.ipynb)\n",
-    "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters"
+    "- [Quick gap-filling with random forest](GapFilling/QuickRandomForestGapFilling.ipynb): Quick gap-filling with pre-defined parameters\n",
+    "- [Parameter optimization for random forest](GapFilling/RandomForestParamOptimization.ipynb)"
    ]
   },
   {
